--- a/Index.html
+++ b/Index.html
@@ -21,31 +21,46 @@
     <section>
         <header id="titulo">
             <img class="Ima" src="Imagenes/Lindex.png" alt="Logo">
-            <h1>Video Juegos En La Nube</h1>
+            <h1>REDES SOCIALES</h1>
 
         </header>
         <nav id="navegacion">
             <h3>MENU DE NAVEGACION </h3>
-            <a href="paginas/Nube.html">Juegos en la nube<br /> </a>
-            <a href="paginas/Ventajas.html">Ventajas<br /></a>
-            <a href="paginas/Google.html">Google Stadia<br /></a>
-            <a href="paginas/Nvidia.html">Geforce Now<br /></a>
-            <a href="paginas/Sony.html">PlayStation Now<br /></a>
-            <a href="paginas/Formulario.html">Formulario<br /></a>
+            <a href="paginas/facebook.html">Facebook<br /></a>
+            <a href="paginas/instagram.html">Instagram<br /> </a>
+            <a href="paginas/whatsapp.html">Whatsapp<br /></a>
+            <a href="paginas/youtube.html">Youtube<br /></a>
+            <a href="paginas/google+.html">Google+<br /></a>
+            <a href="paginas/twitter.html">Twiter<br /></a>
         </nav>
         <article class="contenido">
             <h2>DEFINICION </h2>
             <p>
-                Juego en la nube, también llamado juego bajo demanda, es un tipo de juego en línea que permite la
-                transmisión (streaming) directa y bajo demanda de juegos en un ordenador mediante el uso de un cliente
-                ligero, donde se almacena el juego real en el servidor de la compañía del juego y es transmitido
-                directamente a las computadoras con acceso al servidor a través del cliente.
+                Las redes sociales, en el mundo virtual, son sitios y aplicaciones que operan en niveles diversos – como el profesional, 
+                de relación, entre otros – pero siempre permitiendo el intercambio de información entre personas y/o empresas.
+            </p>
+            <p>
+                Cuando hablamos de red social, lo que viene a la mente en primer lugar son sitios como Facebook, Twitter y LinkedIn o 
+                aplicaciones como Snapchat e Instagram, típicos de la actualidad. Pero la idea, sin embargo, es mucho más antigua: en la 
+                sociología, por ejemplo, el concepto de red social se utiliza para analizar interacciones entre individuos, grupos, 
+                organizaciones o hasta sociedades enteras desde el final del siglo XIX.
+            </p>
+            <p>
+                En Internet, las redes sociales han suscitado discusiones como la de falta de privacidad, pero también han servido como 
+                medio de convocatoria para manifestaciones públicas en protestas. Estas plataformas crearon, también, una nueva forma de 
+                relación entre empresas y clientes, abriendo caminos tanto para la interacción, como para el anuncio de productos o servicios.
             </p>
         </article>
-        <aside class="contenido">
+        <aside style="width: 25%; float: left;">
             <h2>Suscripci&oacute;n a la pagina</h2>
+            <p></p>
             <img class="ima" src="Imagenes/Aindex.png" alt="Proximamente">
         </aside>
+        <article class="contenido">
+            <h2>Publicidad</h2>
+            <img class="ima" src="Imagenes/ups.png" alt="UNIVERSIDAD POLITECNICA SALESIANA">
+        </article>
+        
     </section>
     <footer class="Pie">
         <p> <br />Dennis Alejandro Pe&ntilde;aranda Tello<br /></p>
@@ -55,5 +70,4 @@
         <p> &copy; Todos los derechos reservados<br /></p>
     </footer>
 </body>
-
 </html>
