--- a/paginas/twitter.html
+++ b/paginas/twitter.html
@@ -8,10 +8,10 @@
     Author: DENNIS PENARANDA
     Date: 22/10/2019  
 
-    Filename: Formulario.html
+    Filename: twitter.html
    -->
     <meta charset="UTF-8">
-    <title>Formulario</title>
+    <title>TWITTER</title>
     <link href="../CSS/Reglas.css" rel="stylesheet" />
     <link href="../CSS/DosColumnas.css" rel="stylesheet" />
 </head>
@@ -19,20 +19,27 @@
 <body id="Formu">
     <section>
         <header class="Encabezado">
-            <img class="Ima" src="Imagenes/Lindex.png" alt="Logo">
-            <h1>Formulario</h1>
+            <img class="Ima" src="../Imagenes/Lindex.png" alt="Logo">
+            <h1>TWITTER</h1>
 
         </header>
         <nav class="Menu" id="largo">
             <h2>MENU DE NAVEGACION </h2>
             <a href="../Index.html">Pagina Principal<br /></a>
-            <a href="Nube.html">Juegos en la nube<br /></a>
-            <a href="Ventajas.html">Ventajas<br /></a>
-            <a href="Google.html">Google Stadia<br /></a>
-            <a href="Nvidia.html">Geforce Now<br /></a>
-            <a href="Sony.html">PlayStation Now<br /></a>
+            <a href="facebook.html">Facebook<br /></a>
+            <a href="instagram.html">Instagram<br /> </a>
+            <a href="whatsapp.html">Whatsapp<br /></a>
+            <a href="youtube.html">Youtube<br /></a>
+            <a href="google+.html">Google+<br /></a>
         </nav>
         <article class="contenido">
+            <h2>QUE ES?</h2>
+            <ASide>
+                <p>
+                    Twitter (pronunciación AFI [ˈtwɪtər]) (NYSE: TWTR) es un servicio de microblogging, con sede en San Francisco, California, EE.UU, con filiales en San Antonio (Texas) y Boston (Massachusetts) en Estados Unidos. Twitter, Inc. fue creado originalmente en California, pero está bajo la jurisdicción de Delaware desde 2007.5​ Desde que Jack Dorsey lo creó en marzo de 2006, y lo lanzó en julio del mismo año, la red ha ganado popularidad mundial y se estima que tiene más de 300 millones de usuarios, generando 65 millones de tuits al día y maneja más de 800 000 peticiones de búsqueda diarias.6​ Ha sido denominado como el «SMS de Internet».7​
+                    Apodada como el “sms” de internet. Es menos engorroso que un blog, menos exclusivo que hablar por teléfono, menos formal que un correo electrónico y menos elaborado que la mayoría de redes sociales.   
+                </p>
+            </ASide>
             <h2>Completar </h2>
 
             <form id="for" action="/my-handling-form-page" method="post">
@@ -51,12 +58,17 @@
                     <textarea id="msg"></textarea>
                 </div>
             </form>
-            <input type="submit">
+            <!--<input type="submit">-->
+        </article>
+        <article class="contenido">
+            <h2>Publicidad</h2>
+            <img class="ima" src="../Imagenes/ups.png" alt="UNIVERSIDAD POLITECNICA SALESIANA">
         </article>
     </section>
+
     <footer class="Pie">
         <p> <br />Dennis Alejandro Pe&ntilde;aranda Tello<br /></p>
-        <p> Universidad Politecnica Saleciana<br /></p>
+        <p> Universidad Politecnica Salesiana<br /></p>
         <a href="mailto:dpenaranda@est.ups.edu.ec">Correo<br /></a>
         <a href="tel:0991778635">Telefono <br /></a>
         <p> &copy; Todos los derechos reservados<br /></p>
